WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46363
SVGFEMorpholgyElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=46363
Summary
SVGFEMorpholgyElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-09-23 09:36:19 PDT
SVGFEMorpholgyElement doesn't support dynamic invalidation
Attachments
Patch for feMorphology properties
(423.10 KB, patch)
2010-09-23 09:58 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-09-23 09:58:50 PDT
Created
attachment 68535
[details]
Patch for feMorphology properties
Dirk Schulze
Comment 2
2010-09-23 10:34:29 PDT
Comment on
attachment 68535
[details]
Patch for feMorphology properties r=me
WebKit Commit Bot
Comment 3
2010-09-23 11:18:49 PDT
Comment on
attachment 68535
[details]
Patch for feMorphology properties Clearing flags on attachment: 68535 Committed
r68168
: <
http://trac.webkit.org/changeset/68168
>
WebKit Commit Bot
Comment 4
2010-09-23 11:18:54 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2010-09-23 13:17:31 PDT
http://trac.webkit.org/changeset/68168
might have broken GTK Linux 32-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/68163
http://trac.webkit.org/changeset/68164
http://trac.webkit.org/changeset/68165
http://trac.webkit.org/changeset/68166
http://trac.webkit.org/changeset/68167
http://trac.webkit.org/changeset/68168
http://trac.webkit.org/changeset/68169
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug